Add cancel finish time
